src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>DNBI__CommercialCreditScore__c</fullName>
        <label>D&amp;B Delinquency Score (Raw)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Commercial_Credit_Score_Class__c</fullName>
        <label>D&amp;B Delinquency Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Commercial_Credit_Score_Percentiles__c</fullName>
        <label>D&amp;B Delinquency Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Address__c</fullName>
        <label>D&amp;B Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Avg_High_Credit__c</fullName>
        <label>D&amp;B Avg High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_City__c</fullName>
        <label>D&amp;B City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Country__c</fullName>
        <label>D&amp;B Country/Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_High_Credit__c</fullName>
        <label>D&amp;B High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_State_Province__c</fullName>
        <label>D&amp;B State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Zip_Postal_Code__c</fullName>
        <label>D&amp;B Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_Created_Date__c</fullName>
        <label>Application Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_ID__c</fullName>
        <label>D&amp;B Application ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_Modified_Date__c</fullName>
        <label>Application Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Company_Name__c</fullName>
        <label>D&amp;B Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Credit_Limit__c</fullName>
        <label>Recommended Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Credit_Term_Status__c</fullName>
        <label>Credit Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_DUNS_NO__c</fullName>
        <label>D&amp;B DUNS Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Early_Payment_Discount__c</fullName>
        <label>Early Payment Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Requested_Amount__c</fullName>
        <label>Credit Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Employees__c</fullName>
        <label>D&amp;B Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score_Class__c</fullName>
        <label>D&amp;B Failure Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score_Percentile__c</fullName>
        <label>D&amp;B Failure Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score__c</fullName>
        <label>D&amp;B Failure Score (Raw)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__PAYDEX__c</fullName>
        <label>D&amp;B PAYDEX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Primary_NAICS__c</fullName>
        <label>D&amp;B Primary NAICS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Primary_SIC__c</fullName>
        <label>D&amp;B Primary SIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Rating__c</fullName>
        <label>D&amp;B Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Company_Profile__c</fullName>
        <label>D&amp;B Viability - Company Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Data_Depth_Indicator__c</fullName>
        <label>D&amp;B Viability - Data Depth Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Portfolio_Comparison__c</fullName>
        <label>D&amp;B Viability - Portfolio Comparison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Rating__c</fullName>
        <label>D&amp;B Viability Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Viability_Score__c</fullName>
        <label>D&amp;B Viability - Viability Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Years_in_Business__c</fullName>
        <label>D&amp;B Years in Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Pricing_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Pricing Template</label>
        <referenceTo>inscor__Pricing_Template__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>inscor__All_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>